[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/fonts/Sniglet-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Title menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/fonts/KiriFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Button-title-go.gd" type="Script" id=4]
[ext_resource path="res://TransitionScreen.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 4
outline_color = Color( 0.458824, 1, 0.219608, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00392157, 0.0627451, 0.137255, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.764706, 0.819608, 0.890196, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="Title menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Bachground" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0509804, 0.0941176, 0.2, 1 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 95.0
margin_top = 44.0
margin_right = 919.0
margin_bottom = 169.0
custom_colors/font_color = Color( 0, 0.623529, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "welcome to my project"

[node name="TitleUsername" type="Label" parent="."]
margin_left = 98.0
margin_top = 151.0
margin_right = 922.0
margin_bottom = 276.0
custom_colors/font_color = Color( 1, 0, 0.513726, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Panel" type="Panel" parent="."]
margin_left = 324.0
margin_top = 305.0
margin_right = 694.0
margin_bottom = 409.0
custom_styles/panel = SubResource( 2 )

[node name="UsernameField" type="LineEdit" parent="Panel"]
margin_left = 49.0
margin_top = 25.0
margin_right = 312.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
clear_button_enabled = true
placeholder_text = "Type your Username"
caret_blink = true

[node name="Button-title-go" type="Button" parent="."]
margin_left = 434.0
margin_top = 427.0
margin_right = 599.0
margin_bottom = 481.0
custom_colors/font_color = Color( 0.12549, 0.729412, 0.701961, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.262745, 0.666667, 1 )
custom_fonts/font = SubResource( 4 )
text = "Go!"
flat = true
script = ExtResource( 4 )

[node name="TransitionScreen" parent="." instance=ExtResource( 5 )]

[connection signal="text_entered" from="Panel/UsernameField" to="." method="_on_Username_Field_text_entered"]
[connection signal="pressed" from="Button-title-go" to="." method="_on_Buttontitlego_pressed"]
[connection signal="pressed" from="Button-title-go" to="Button-title-go" method="_on_Buttontitlego_pressed"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
